--- a/app/src/main/res/layout/publication.xml
+++ b/app/src/main/res/layout/publication.xml
@@ -41,7 +41,7 @@
         android:id="@+id/likeButton2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="16dp"
+        android:layout_marginEnd="20dp"
         android:background="?attr/selectableItemBackground"
         android:clickable="true"
         android:focusable="auto"
@@ -52,7 +52,8 @@
         android:paddingBottom="8dp"
         app:layout_constraintBottom_toBottomOf="@+id/miniaturePublicationImageView"
         app:layout_constraintEnd_toStartOf="@+id/dislikeButton2"
-        app:layout_constraintTop_toTopOf="@+id/miniaturePublicationImageView">
+        app:layout_constraintTop_toTopOf="@+id/miniaturePublicationImageView"
+        app:layout_constraintVertical_bias="0.463">
 
         <ImageView
             android:id="@+id/imageView2"
@@ -72,7 +73,7 @@
         android:id="@+id/dislikeButton2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="16dp"
+        android:layout_marginEnd="88dp"
         android:background="?attr/selectableItemBackground"
         android:clickable="true"
         android:focusable="auto"
@@ -83,7 +84,8 @@
         android:paddingBottom="8dp"
         app:layout_constraintBottom_toBottomOf="@+id/likeButton2"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/likeButton2">
+        app:layout_constraintTop_toTopOf="@+id/likeButton2"
+        app:layout_constraintVertical_bias="1.0">
 
         <ImageView
             android:id="@+id/imageView3"
@@ -98,4 +100,16 @@
             android:gravity="center"
             android:text="12" />
     </LinearLayout>
+
+    <Button
+        android:id="@+id/btn_sup"
+        android:layout_width="75dp"
+        android:layout_height="69dp"
+        android:layout_marginStart="316dp"
+        android:text="Archiver"
+        android:textSize="10dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="@+id/miniaturePublicationImageView"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.505" />
 </androidx.constraintlayout.widget.ConstraintLayout>
